<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_frame_layout_height">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_background_image_height"
            android:background="@drawable/background_image"
            android:contentDescription="@string/background_image_description" />

        <com.google.android.material.card.MaterialCardView
            style="@style/BusinessCard.MainCardViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/main_card_image_size"
                android:layout_height="@dimen/main_card_image_size"
                android:layout_margin="@dimen/margin_standard"
                android:background="@drawable/logo_manu"
                android:contentDescription="@string/main_card_image_description" />

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_half">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/BusinessCard.MainTitleTextView"
            android:text="@string/main_quote"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userNameTextView"
            style="@style/BusinessCard.MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userLocationTextView"
            style="@style/BusinessCard.MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userEmailTextView"
            style="@style/BusinessCard.MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/userNicknameTextView"
            style="@style/BusinessCard.MainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_nickname" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_edit" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>